[Website] Fix styles causing top/bottom gap on body

--- a/website/styles/index.css
+++ b/website/styles/index.css
@@ -60,11 +60,15 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
+html {
+  height: 100%;
+}
+
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   text-rendering: optimizeSpeed;
-  line-height: 1.5;
 }
 
 /* A elements that don't have a class get default styles */
